FIX: State background color missing in bulk renaming of hosts
Prior this commit, the color of the State row was not showing. This
commit fixes that behaviour an shows the following background colors:

* Initialized: Grey
* Running: Blue
* Exception: as Critical (Red)
* Stopped: as Warning (Yellow)
* Finished: as Success (Green)

--- a/web/htdocs/themes/modern-dark/scss/_variables.scss
+++ b/web/htdocs/themes/modern-dark/scss/_variables.scss
@@ -64,6 +64,7 @@ $color-state-7-background: rgb(233, 128, 110);
 $color-state-8-background: rgb(241, 174, 162);
 $color-state-9-background: rgb(191, 90, 191);
 $color-state-success-background: $success; // green
+$color-state-running-background: $hostdown;
 
 // -----------------------------------------------------------------------------
 // Tables
